# omind

./: .gitignore  .gitleaks.toml  .woodpecker.yml  BACKLOG.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LessonsLearned.md  README.md  RESULTS.md  SECURITY.md  conformance.toml  pyproject.toml
.github/: dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: codeql.yml  test.yml
docs/: manual-setup.md  mesh-ops.md  mesh.md  self-update.md  troubleshooting.md
docs/graph-demo/: README.md  make_demo_vault.py  render_graph.py
e2e/: README.md  __init__.py  conftest.py  nodes.py  providers.py  sweep.py  test_bootstrap.py  test_mesh_sync.py  test_provider_smoke.py
extras/: README.md  omi_enforce.py  omi_write.py
scripts/: bootstrap.sh  test.sh
src/omind/: __init__.py  __main__.py  _omi_enforce.py  adapters.py  agents.py  ai_usage.py  backup.py  checkpoint.py  cli.py  clock.py  compliance.py  corpus.py  embed.py  filelock.py  fleet-sudo.sh  git-fresh-base.sh  graph.py  guard.py  harness.py  help_system.py  hooks.py  journal.py  learn.py  lint.py  loopguard.py  merge.py  mesh.py  notes.py  okf.py  omi-gate-reset.sh  omi-guard-hermes.sh  omi-guard.opencode.js  omi-guard.sh  paths.py  policy.py  proc.py  provision.py  quickstart.py  recall.py  retrieve.py  (+8 more)
src/omind/skills/omind/: SKILL.md
src/omind/skills/omind/agents/: openai.yaml
src/omind/web/: __init__.py  app.py
src/omind/web/static/: app.css  app.js  graph.js  index.html
src/omind/web/tailwind/: input.css  tailwind.config.js
tests/: conftest.py  test_adapters.py  test_agents.py  test_ai_usage.py  test_backup.py  test_checkpoint.py  test_cli.py  test_cli_integration.py  test_clock.py  test_compliance.py  test_corpus.py  test_embed.py  test_filelock.py  test_graph.py  test_guard.py  test_harness.py  test_hooks.py  test_journal.py  test_learn.py  test_lint.py  test_loopguard.py  test_merge.py  test_mesh.py  test_okf.py  test_policy.py  test_proc.py  test_provision.py  test_quickstart.py  test_retrieve.py  test_secret_output_guard.py  test_server.py  test_store.py  test_transfer.py  test_update.py  test_vectorindex.py  test_verify.py  test_web.py
