[project]
name = "omind"
version = "2.38.0"
description = "Reproduce the OMI/Obsidian memory integration for AI agents, plus a local web app to view, edit, and add memory entries."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Aaron K. Clark", email = "akclark@thenetwerk.net" }]
keywords = [
    "obsidian",
    "claude-code",
    "mcp",
    "memory",
    "markdown",
    "fastapi",
    "cli",
    "nebraska",
    "xkcd-2347",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Utilities",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pyyaml>=6.0",
    "mcp>=1.10",
]

[project.optional-dependencies]
e2e = [
    "runpod>=1.7",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.9",
    "httpx>=0.27",
    "pip-audit>=2.10.0",
    "types-PyYAML",
]

[project.urls]
Homepage = "https://github.com/CryptoJones/omind"
Repository = "https://github.com/CryptoJones/omind"
Issues = "https://github.com/CryptoJones/omind/issues"
"Made in Nebraska (xkcd 2347)" = "https://xkcd.com/2347/"

[project.scripts]
omind = "omind.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/omind"]
# Tailwind build inputs are dev-only; the compiled output is vendored in static/.
exclude = ["src/omind/web/tailwind"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["omind"]
# __main__ is thin CLI entry wiring exercised at startup, not in unit tests.
omit = ["src/omind/__main__.py"]

[tool.coverage.report]
show_missing = true
# Set at/below the current measured total (84.6% with branch coverage) so the
# gate guards against regression without failing today; raise it as it improves.
fail_under = 80
exclude_lines = ["pragma: no cover", "if __name__ == .__main__.:", "raise NotImplementedError"]
